
using UnityEngine;

public static class AnimationParams{
    public static readonly int Velocity = Animator.StringToHash("Velocity");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int Skill = Animator.StringToHash("Skill");
    public static readonly int Idle = Animator.StringToHash("Idle");
    public static readonly int AttackAnimSpeedMultiplier = Animator.StringToHash("AttackAnimSpeedMultiplier");
}

